Fix Vercel deployment routing for new use case pages
- Add rewrites for intelligence-operations, business-analytics, creative-industries, research-development
- Update _redirects file for proper page routing
- Ensure all new use case pages are accessible via clean URLs
- Fix deployment issue preventing new pages from being visible

--- a/vercel.json
+++ b/vercel.json
@@ -17,6 +17,22 @@
       "destination": "/use-cases.html"
     },
     {
+      "source": "/intelligence-operations",
+      "destination": "/intelligence-operations.html"
+    },
+    {
+      "source": "/business-analytics",
+      "destination": "/business-analytics.html"
+    },
+    {
+      "source": "/creative-industries",
+      "destination": "/creative-industries.html"
+    },
+    {
+      "source": "/research-development",
+      "destination": "/research-development.html"
+    },
+    {
       "source": "/qvb",
       "destination": "/qvb.html"
     },
@@ -31,7 +47,7 @@
       "headers": [
         {
           "key": "Cache-Control",
-          "value": "public, max-age=31536000, immutable"
+          "value": "public, max-age=31536000, immutable"        
         }
       ]
     },
